@@ -1,16 +1,0 @@
-(* -*- mode: tuareg; -*- *)
-let __interactive = !Sys.interactive ;;
-Sys.interactive := false ;;     (* suppress ocamlfind messages *)
-#use "topfind" ;;
-#require "str" ;;
-let () =
-  if not (Sys.file_exists "_build/src/abella.cma") then begin
-    Printf.printf "Building abella.cma...\n%!" ;
-    ignore (Sys.command "ocamlbuild -no-log src/abella.cma")
-  end ;;
-#directory "_build" ;;
-#directory "_build/src" ;;
-Sys.interactive := true ;;      (* load Abella in non-interactive mode *)
-#load "abella.cma" ;;
-Sys.interactive := __interactive ;;
-Printf.printf "Abella version %s loaded.\n%!" Version.version ;;
